--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,37 @@
-.DS_Store
-thumbs.db
-desktop.ini
-._*
-*.o
-*.a
-*.exe
-*.lib
-/libBitIO/BUILD/*
-libBitIO/src/OldCode.c
+# Generic
 *.html
-*.xcuserstate
+*.htm
+/BUILD/*
+
+# Mac stuff
+*.a
+*.o
+*.plist
 *.xcbkptlist
+*.xcuserstate
+*.xcuserdatad/*
+.DS_Store
+._*
 project.xcworkspace/
 xcuserdata/
+
+# Windows stuff
+*.db
+*.db-shm
+*.db-wal
+*.dll
+*.exe
+*.idb
+*.ini
+*.ipch
+*.json
+*.lib
+*.log
+*.obj
+*.opendb
+*.pch
+*.pdb
+*.sqlite
+*.suo
+*.tlog
+.vs/*
