--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Dependencies/BitIO"]
-	path = Dependencies/BitIO
-	url = https://github.com/bumblebritches57/BitIO.git
+[submodule "Dependencies/FoundationIO"]
+	path = Dependencies/FoundationIO
+	url = https://github.com/bumblebritches57/FoundationIO.git
